# jaeckel-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: lets_be_rational.rs
src/: erf_cody.rs  lets_be_rational.rs  lib.rs  normaldistribution.rs  rationalcubic.rs
tests/: lets_be_rational.rs  test_black_scholes.rs  test_normal_distribution.rs  test_rational_cubic.rs
